--- a/search.fxml
+++ b/search.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -21,11 +22,10 @@
          </font>
       </Label>
       <Button fx:id="searchBtn" layoutX="336.0" layoutY="225.0" mnemonicParsing="false" onAction="#filterSearch" prefHeight="26.0" prefWidth="111.0" text="Search" />
-      <CheckBox fx:id="sculptureFilter" layoutX="20.0" layoutY="269.0" mnemonicParsing="false" text="Sculpture" />
-      <CheckBox fx:id="paintingFilter" layoutX="124.0" layoutY="269.0" mnemonicParsing="false" text="Painting" />
       <Button fx:id="logoutBtn" layoutX="521.0" layoutY="408.0" mnemonicParsing="false" onAction="#logout" text="Logout" />
       <Button fx:id="backToProfileBtn" layoutX="10.0" layoutY="408.0" mnemonicParsing="false" onAction="#toProfile" prefHeight="26.0" prefWidth="93.0" text="Go Back" />
       <Label fx:id="warningMsg" layoutX="20.0" layoutY="198.0" prefHeight="18.0" prefWidth="127.0" textFill="RED" />
       <CheckBox fx:id="favouriteFilter" layoutX="210.0" layoutY="269.0" mnemonicParsing="false" text="Favourite" />
+      <ChoiceBox fx:id="filterBox" layoutX="20.0" layoutY="265.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
