--- a/results.fxml
+++ b/results.fxml
@@ -1,32 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Results">
    <children>
-      <Label layoutX="314.0" layoutY="26.0" prefHeight="42.0" prefWidth="170.0" text="ARTATAWE" textFill="#001eff">
-         <font>
-            <Font size="33.0" />
-         </font>
-      </Label>
-      <Label layoutX="34.0" layoutY="69.0" prefHeight="42.0" prefWidth="126.0" text="Searching for :">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <Label fx:id="resultsLbl" layoutX="364.0" layoutY="127.0" prefHeight="34.0" prefWidth="71.0" text="Results">
+      <Label fx:id="resultsLbl" layoutX="448.0" layoutY="140.0" prefHeight="34.0" prefWidth="71.0" text="Results">
          <font>
             <Font size="21.0" />
          </font>
@@ -34,27 +19,24 @@
       <Button fx:id="goBackBtn" layoutX="22.0" layoutY="601.0" mnemonicParsing="false" onAction="#goBackPreviousPage" text="Go Back" />
       <Button fx:id="homeBtn" layoutX="109.0" layoutY="601.0" mnemonicParsing="false" onAction="#switchBackHome" text="HOME" />
       <Button fx:id="logoutBtn" layoutX="711.0" layoutY="601.0" mnemonicParsing="false" onAction="#logout" text="Logout" />
-      <ListView fx:id="artworksList" layoutX="22.0" onMouseClicked = '#artworkViewMouseClick' layoutY="127.0" prefHeight="400.0" prefWidth="300.0" />
-      
-      
+      <ListView fx:id="artworksList" layoutX="447.0" layoutY="177.0" onMouseClicked="#artworkViewMouseClick" prefHeight="400.0" prefWidth="300.0" />
+
+
       <Label fx:id="keywordsText" layoutX="204.0" layoutY="82.0" />
-       <Label fx:id="artataweLbl" layoutX="20.0" layoutY="21.0" prefHeight="84.0" prefWidth="263.0" text="ARTATAWE" textFill="#2004f2">
+      <Label fx:id="artataweLbl" layoutX="268.0" layoutY="22.0" prefHeight="84.0" prefWidth="263.0" text="ARTATAWE" textFill="#2004f2">
          <font>
             <Font name="System Bold" size="43.0" />
          </font>
       </Label>
-      <TextField fx:id="searchBar" layoutX="20.0" layoutY="223.0" onAction="#search" prefHeight="32.0" prefWidth="294.0" />
+      <TextField fx:id="searchBar" layoutX="20.0" layoutY="223.0" onAction="#search" prefHeight="32.0" prefWidth="229.0" promptText="Type keywords here..." />
       <Label fx:id="searchLbl" layoutX="20.0" layoutY="140.0" prefHeight="58.0" prefWidth="238.0" text="Search for bid" textFill="#010000">
          <font>
             <Font size="29.0" />
          </font>
       </Label>
-      <Button fx:id="searchBtn" layoutX="336.0" layoutY="225.0" mnemonicParsing="false" onAction="#search" prefHeight="26.0" prefWidth="111.0" text="Search" />
-      <CheckBox fx:id="sculptureFilter" layoutX="20.0" layoutY="269.0" mnemonicParsing="false" text="Sculpture" />
-      <CheckBox fx:id="paintingFilter" layoutX="124.0" layoutY="269.0" mnemonicParsing="false" text="Painting" />
-      <Button fx:id="logoutBtn" layoutX="521.0" layoutY="408.0" mnemonicParsing="false" onAction="#logout" text="Logout" />
-      <Button fx:id="backToProfileBtn" layoutX="10.0" layoutY="408.0" mnemonicParsing="false" onAction="#toProfile" prefHeight="26.0" prefWidth="93.0" text="Go Back" />
+      <Button fx:id="searchBtn" layoutX="258.0" layoutY="226.0" mnemonicParsing="false" onAction="#search" prefHeight="26.0" prefWidth="111.0" text="Search" />
       <Label fx:id="warningMsg" layoutX="20.0" layoutY="198.0" prefHeight="18.0" prefWidth="127.0" textFill="RED" />
-      <CheckBox fx:id="favouriteFilter" layoutX="210.0" layoutY="269.0" mnemonicParsing="false" text="Favourite" />
+      <CheckBox fx:id="favouriteFilter" layoutX="178.0" layoutY="265.0" mnemonicParsing="false" text="Favourite" />
+      <ChoiceBox fx:id="filterBox" layoutX="20.0" layoutY="261.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
